--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# Logs
 logs
 *.log
 npm-debug.log*
@@ -12,6 +11,7 @@ dist
 dist-ssr
 *.local
 bun.lockb
+.env
 
 # Editor directories and files
 .vscode/*
